force-app/main/default/objects/B25__Reservation_Title__c/B25__Reservation_Title__c.object-meta.xml
<CustomObject>
    <description>The title of a Dimension or a Reservation on a Calendar.</description>
    <label>Reservation Title</label>
    <nameField>
        <label>Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservation Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>