force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Bold__c.field-meta.xml
<CustomField>
    <fullName>B25__Bold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this Title will be in bold.</description>
    <inlineHelpText>Lorsque cette option est cochée, ce titre sera en gras.</inlineHelpText>
    <label>Bold</label>
    <type>Checkbox</type>
</CustomField>