force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On which Calendar should the Reservation Title be shown?</description>
    <inlineHelpText>Sur quel calendrier le titre de la réservation doit-il être affiché ?</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>B25__Calendar__c</referenceTo>
    <relationshipLabel>Resource Titles</relationshipLabel>
    <relationshipName>Reservation_Titles</relationshipName>
    <type>Lookup</type>
</CustomField>