force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Dynamic__c.field-meta.xml
<CustomField>
    <fullName>B25__Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this Title field as dynamic. This allows you to specify a class name instead of a field name and calculate the value dynamically based on Calendar context like Reservations in Resource and start and end time of the View. For more information visit (link to docs)</description>
    <inlineHelpText>Marque ce champ de titre comme dynamique. Cela vous permet de spécifier un nom de classe au lieu d’un nom de champ et de calculer la valeur dynamiquement en fonction du contexte du calendrier, comme les réservations dans la ressource et l’heure de début et de fin de la vue.</inlineHelpText>
    <label>Dynamic</label>
    <type>Checkbox</type>
</CustomField>