force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Font_Size__c.field-meta.xml
<CustomField>
    <fullName>B25__Font_Size__c</fullName>
    <defaultValue>9</defaultValue>
    <description>This determines the size of the font.</description>
    <inlineHelpText>Cela détermine la taille de la police.</inlineHelpText>
    <label>Font Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>