force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Hide_When_Empty__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_When_Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hides this Title when the field it references is empty. The Title wil then no longer take up space.</description>
    <inlineHelpText>Masque ce titre lorsque le champ auquel il fait référence est vide. Le titre n’occupera alors plus d’espace.</inlineHelpText>
    <label>Hide When Empty</label>
    <type>Checkbox</type>
</CustomField>