force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The label shown on the Calendar together with the value of the field/dynamic field.</description>
    <inlineHelpText>Le libellé affiché sur le calendrier ainsi que la valeur du champ/le champ dynamique.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>