force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Will show the Titles based on ranking from low to high.</description>
    <inlineHelpText>Affiche les titres en fonction de leur classement, du plus bas au plus haut.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>