force-app/main/default/objects/B25__Reservation_Title__c/fields/B25__Reservation_Title_Group__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Title_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A group of Reservation Titles using a Reservation Display Context. You can specify one Reservation Title Group to display on a Reservation in a certain context.</description>
    <inlineHelpText>Un groupe de titres de réservation utilisant un contexte d’affichage de réservation. Vous pouvez spécifier un groupe de titres de réservation à afficher sur une réservation dans un certain contexte.</inlineHelpText>
    <label>Reservation Title Group</label>
    <referenceTo>B25__Reservation_Title_Group__c</referenceTo>
    <relationshipLabel>Titles</relationshipLabel>
    <relationshipName>Titles</relationshipName>
    <type>Lookup</type>
</CustomField>