force-app/main/default/objects/B25__Reservation_Title__c/recordTypes/B25__Reservation_Title.recordType-meta.xml
<RecordType>
    <fullName>B25__Reservation_Title</fullName>
    <active>true</active>
    <description>Specifies a field to display on a reservation in the calendar</description>
    <label>Reservation Title</label>
</RecordType>