force-app/main/default/objects/B25__Reservation_Title__c/recordTypes/B25__Resource_Title.recordType-meta.xml
<RecordType>
    <fullName>B25__Resource_Title</fullName>
    <active>true</active>
    <description>Specifies a field that should be displayed on a resource on the calendar</description>
    <label>Resource Title</label>
</RecordType>