force-app/main/default/objects/B25__Reservation_Title__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__Bold__c</columns>
    <columns>B25__Calendar__c</columns>
    <columns>B25__Font_Size__c</columns>
    <columns>B25__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>